--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/bartekgodon/Week3NodeHeroku/issues"
   },
-  "homepage": "https://github.com/bartekgodon/Week3NodeHeroku#readme"
+  "homepage": "https://github.com/bartekgodon/Week3NodeHeroku#readme",
+  "dependencies": {
+    "express": "^4.13.4"
+  }
 }
