--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "week3nodeheroku",
   "version": "1.0.0",
   "description": "This is a Week 3 Lab",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
